<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Covid App</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="welcome_you_are_logged_in">Welcome! You are Logged In</string>
    <string name="logout">LogOut</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="not_registered_sign_up_here">Not Registered? Sign up here</string>
    <string name="button">Button</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here</string>

    <string name="submit">submit</string>
    <string name="password">Password</string>
    <string name="proceed">Proceed</string>
    <string name="covid_19">Covid-19</string>
    <string name="serious">Serious</string>
    <string name="_12_786">12,786</string>
    <string name="_9_750">9,750</string>
    <string name="death">Death</string>
    <string name="go">Go</string>
    <string name="my_country">My Country</string>
    <string name="global">Global</string>
    <string name="total">Total</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="affected">Affected</string>
    <string name="_6_67_765">6,67,765</string>
    <string name="active">Active</string>
    <string name="_3_70_567">3,70,567</string>
    <string name="spread_of_virus">Spread of virus</string>
    <string name="see_all">See All</string>
    <string name="recovered">Recovered</string>
    <string name="_5_765">5,765</string>
    <string name="if_you_feel_sick_with_any_of_covid_19_symptoms_nplease_call_or_sms_us_immediately_for_help">If you feel sick with any of covid-19 symptoms\nplease call or SMS us immediately for help.</string>
    <string name="call_now">Call Now</string>
    <string name="send_sms">Send SMS</string>
    <string name="see_your_14_days_routine">See Your 14 Days Routine</string>
    <string name="prevention">Prevention</string>
    <string name="are_you_feeling_sick">Are you feeling sick?</string>

    <string name="statistics">Statistics</string>
    <string name="your_country_statistics">Your Country Statistics</string>
    <string name="if_you_feel_sick_with_any_of_covid_19_symptoms_nplease_call_us_immediately_for_help">if_you_feel_sick_with_any_of_covid_19_symptoms_\nplease_call_us_immediately_for_help</string>
    <string name="if_you_feel_sick_with_any_of_covid_19_symptoms_please_call_us_immediately_for_help">if_you_feel_sick_with_any_of_covid_19_symptoms_please_call_us_immediately_for_help</string>
    <string name="what_are_your_health_problems">What are your health problems?</string>
    <string name="Covid">Covid</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="wake_up">Wake Up</string>

    <string name="yoga_pranayam">Yoga Pranayam</string>
    <string name="hot_lemon_water">Hot Lemon Water</string>


    <string name="kadha">Kadha</string>
    <string name="lunch">Lunch</string>
    <string name="steem">Steem</string>
    <string name="rest">Rest</string>
    <string name="yoga_and_aerobics">Yoga and Aerobics</string>
    <string name="dinner">Dinner</string>
    <string name="hot_milk">Hot Milk</string>
    <string name="Logout">Logout</string>
    <string name="news">News</string>
    <string name="signout">SignOut</string>
    <string name="thanks_visit_again_and_take_care">Thanks! Visit Again and Take Care</string>
    <string name="log_out">Log Out</string>
    <string name="lo">Lo</string>
    <string name="check_your_vaccination_date">Check your vaccination date</string>

    <string name="hello_here">hello here</string>
    <string name="diabetes">diabetes</string>
    <string name="others">others</string>
    <string name="start_your_vacciantion_drive">Start your vacciantion drive</string>

    <string name="check_routine_for_bloodpressure_patient">Check routine for BloodPressure patient</string>
    <string name="check_routine_for_diabetes_patient">Check routine for diabetes patient</string>
    <string name="check_routine_for_other_patient">Check routine for other patient</string>
    <string name="when_to_take_vaccine">When To Take Vaccine?</string>
    <string name="two_doses_of_vaccine_28_days_apart_need_to_be_taken_by_an_individual_to_complete_the_vaccination_schedule">Two doses of vaccine, 28 days apart, need to be taken by an individual to complete the vaccination schedule.</string>
    <string name="covidwarrior">CovidWarrior</string>
    <string name="day_1">Day 1</string>
    <string name="day_2">day_2</string>
    <string name="first_day">First day</string>
    <string name="second_day">Second Day</string>
    <string name="get_yourself_a_vaccine">Get Yourself A Vaccine.</string>
    <string name="get_yourself_vaccinated">Get Yourself Vaccinated</string>
    <string name="vaccinate">Vaccinate</string>
    <string name="covidfighters">CovidFighters</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="Day1">
        <item> Day 1 </item>
        <item> M1 - On Rising  </item>
        <item> M2 - BreakFast </item>
        <item> M3 - Mid-Meal </item>
        <item> M4 - Lunch </item>
        <item> M5 - Mid-Meal </item>
    </string-array>

    <string-array name="Day2">
        <item> Day 2 </item>
        <item> M1 - Date and walnut  </item>
        <item> M2 - Idli Sambhar </item>
        <item> M3 - Rasam with pepper </item>
        <item> M4 - Ajwain and namak paratha </item>
        <item> M5 - Cashews with jaggery </item>
    </string-array>

    <string-array name="Day3">
        <item> Day 3 </item>
        <item> M1 - Pistas  </item>
        <item> M2 - Ragi dosa with gun powder </item>
        <item> M3 - Dry coconut </item>
        <item> M4 - Rajma Chawal </item>
        <item> M5 - Mathri </item>
    </string-array>

    <string-array name="Day4">
        <item> Day 4 </item>
        <item> M1 - Cashews and soaked raisins  </item>
        <item> M2 - Upma </item>
        <item> M3 - Nimbu sherbet </item>
        <item> M4 - Ghee and namak roasted </item>
        <item> M5 - Rice with Jeera tadka </item>
    </string-array>

    <string-array name="Day5">
        <item> Day 5 </item>
        <item> M1 - Cashews and soaked raisins  </item>
        <item> M2 - Upma </item>
        <item> M3 - Nimbu sherbet </item>
        <item> M4 - Ghee and namak roasted </item>
        <item> M5 - Rice with Jeera tadka </item>
    </string-array>

    <string-array name="Day6">
        <item> Day 6 </item>
        <item> M1 - Dates and walnuts  </item>
        <item> M2 - Koki </item>
        <item> M3 - Making and eating pista laddoo</item>
        <item> M4 - Chana and chawal </item>
        <item> M5 - Thandai </item>
    </string-array>

    <string-array name="Day7">
        <item> Day 7 </item>
        <item> M1 - Khareek  </item>
        <item> M2 - Khakra and chai </item>
        <item> M3 - Apricot </item>
        <item> M4 - Amboli and achaar </item>
        <item> M5 - Make and eat shankarpara </item>
    </string-array>

    <string-array name="Day8">
        <item> Day 8 </item>
        <item> M1 - On Rising  </item>
        <item> M2 - BreakFast </item>
        <item> M3 - Mid-Meal </item>
        <item> M4 - Lunch </item>
        <item> M5 - Mid-Meal </item>
    </string-array>

    <string-array name="Day9">
        <item> Day 9 </item>
        <item> M1 - Date and walnut  </item>
        <item> M2 - Idli Sambhar </item>
        <item> M3 - Rasam with pepper </item>
        <item> M4 - Ajwain and namak paratha </item>
        <item> M5 - Cashews with jaggery </item>
    </string-array>

    <string-array name="Day10">
        <item> Day 10 </item>
        <item> M1 - Pistas  </item>
        <item> M2 - Ragi dosa with gun powder </item>
        <item> M3 - Dry coconut </item>
        <item> M4 - Rajma Chawal </item>
        <item> M5 - Mathri </item>
    </string-array>

    <string-array name="Day11">
        <item> Day 11 </item>
        <item> M1 - Cashews and soaked raisins  </item>
        <item> M2 - Upma </item>
        <item> M3 - Nimbu sherbet </item>
        <item> M4 - Ghee and namak roasted </item>
        <item> M5 - Rice with Jeera tadka </item>
    </string-array>

    <string-array name="Day12">
        <item> Day 12 </item>
        <item> M1 - Cashews and soaked raisins  </item>
        <item> M2 - Upma </item>
        <item> M3 - Nimbu sherbet </item>
        <item> M4 - Ghee and namak roasted </item>
        <item> M5 - Rice with Jeera tadka </item>
    </string-array>

    <string-array name="Day13">
        <item> Day 13 </item>
        <item> M1 - Dates and walnuts  </item>
        <item> M2 - Koki </item>
        <item> M3 - Making and eating pista laddoo</item>
        <item> M4 - Chana and chawal </item>
        <item> M5 - Thandai </item>
    </string-array>

    <string-array name="Day14">
        <item> Day 14 </item>
        <item> M1 - Khareek  </item>
        <item> M2 - Khakra and chai </item>
        <item> M3 - Apricot </item>
        <item> M4 - Amboli and achaar </item>
        <item> M5 - Make and eat shankarpara </item>
    </string-array>


</resources>