<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".RoutineActivity2">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="#7234FE"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="367dp"
            android:layout_height="52dp"
            android:layout_marginBottom="704dp"
            android:layout_marginEnd="34dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="90dp"
            android:background="#7234FE"
            android:padding="14dp"
            android:text="@string/yoga_pranayam"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="362dp"
            android:layout_height="48dp"
            android:layout_marginBottom="547dp"
            android:layout_marginEnd="34dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="22dp"
            android:background="#7234FE"
            android:padding="14dp"
            android:text="@string/hot_lemon_water"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView23"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="362dp"
            android:layout_height="51dp"
            android:layout_marginBottom="564dp"
            android:layout_marginEnd="34dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="18dp"
            android:background="#7234FE"
            android:padding="14dp"
            android:text="@string/hot_milk"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView24"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="358dp"
            android:layout_height="55dp"
            android:layout_marginBottom="384dp"
            android:layout_marginEnd="34dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="18dp"
            android:background="#7234FE"
            android:padding="14dp"
            android:text="@string/steem"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_marginBottom="316dp"
            android:layout_marginEnd="34dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="18dp"
            android:background="#7234FE"
            android:padding="14dp"
            android:text="@string/kadha"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26"
            app:layout_constraintVertical_bias="0.037" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="354dp"
            android:layout_height="46dp"
            android:layout_marginBottom="244dp"
            android:layout_marginEnd="34dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="22dp"
            android:background="#7234FE"
            android:padding="14dp"
            android:text="@string/lunch"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView27"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="347dp"
            android:layout_height="49dp"
            android:layout_marginBottom="176dp"
            android:layout_marginEnd="34dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="18dp"
            android:background="#7234FE"
            android:padding="14dp"
            android:text="@string/steem"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView28"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="351dp"
            android:layout_height="47dp"
            android:layout_marginBottom="105dp"
            android:layout_marginEnd="34dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="21dp"
            android:background="#7234FE"
            android:padding="14dp"
            android:text="@string/rest"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView29"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="348dp"
            android:layout_height="48dp"
            android:layout_marginBottom="136dp"
            android:layout_marginEnd="34dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="23dp"
            android:background="#7234FE"
            android:padding="14dp"
            android:text="@string/yoga_and_aerobics"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView30" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="344dp"
            android:layout_height="48dp"
            android:layout_marginBottom="64dp"
            android:layout_marginEnd="34dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="22dp"
            android:background="#7234FE"
            android:padding="14dp"
            android:text="@string/dinner"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView32" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="344dp"
            android:layout_height="45dp"
            android:layout_marginEnd="34dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="14dp"
            android:background="#7234FE"
            android:padding="14dp"
            android:text="@string/hot_milk"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView34"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>